--- a/iris/thoughts/thesis.tex
+++ b/iris/thoughts/thesis.tex
@@ -122,6 +122,19 @@ D. Gordon E. Robertson
 \textit{Wikipedia article for Iris Versicolor}. 
 \\\texttt{https://en.wikipedia.org/wiki/Iris\_versicolor}
 
+\bibitem{virginica} 
+Frank Mayfield
+\textit{Wikipedia article for Iris Virginica}. 
+\\\texttt{https://en.wikipedia.org/wiki/Iris\_virginica}
+
+\bibitem{uci} 
+\textit{UCI Machine Learning repository}. 
+\\\texttt{http://archive.ics.uci.edu/ml/}
+
+\bibitem{iris} 
+\textit{Iris dataset page at UCI Machine Learning repository}. 
+\\\texttt{http://archive.ics.uci.edu/ml/datasets/Iris}
+
 \end{thebibliography}
 
 \end{document}
