--- a/iris/thoughts/thesis.tex
+++ b/iris/thoughts/thesis.tex
@@ -135,6 +135,11 @@ Frank Mayfield
 \textit{Iris dataset page at UCI Machine Learning repository}. 
 \\\texttt{http://archive.ics.uci.edu/ml/datasets/Iris}
 
+\bibitem{repo}
+\textit{Github repository with the experiments and datasets}
+\\\texttt{https://github.com/hristo-vrigazov/big-three-weka}
+
+
 \end{thebibliography}
 
 \end{document}
