First sight of the dataset

--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -26,6 +26,7 @@ The dataset contains the following attributes about a person ~\cite{uci-link}:
     \item: Native country: United-States, Cambodia, England, Puerto-Rico, Canada, Germany, Outlying-US(Guam-USVI-etc), India, Japan, Greece, South, China, Cuba, Iran, Honduras, Philippines, Italy, Poland, Jamaica, Vietnam, Mexico, Portugal, Ireland, France, Dominican-Republic, Laos, Ecuador, Taiwan, Haiti, Columbia, Hungary, Guatemala, Nicaragua, Scotland, Thailand, Yugoslavia, El-Salvador, Trinadad and Tobago, Peru, Hong, Holand-Netherlands.
 \end{enumerate}
 \section{First look at the dataset}
+There are a lot more examples from the first class (<50k earnings). 
 
 \chapter{Analyze the data}
 \section{Handling missing values}
