--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -39,7 +39,7 @@ Since there are 48842 instances, we will use hold out set. We will split the dat
 \section{Handling missing values}
 For this dataset, it looks like the most logical decision is to replace the missing values with the mean or median for every attribute, since imputing the rows will likely lose data in this noisy dataset.
 \section{Normalization and standardization}
-Standardization does not seem like a good solution, since the attributes do not look like Gaussian distributed.
+Standardization does not seem like a good solution, since the attributes do not look like Gaussian distributed. A normalized dataset however makes sense, and one is available in the Github repository for the project \cite{repo}.
 \section{Descriptive statistics}
 
 \chapter{Prepare data}
