--- a/adult/thoughts/thesis.tex
+++ b/adult/thoughts/thesis.tex
@@ -117,6 +117,10 @@ Adult dataset link
 \textit{UCI Machine Learning dataset repository}. 
 \\\texttt{http://archive.ics.uci.edu/ml/datasets/Adult}
 
+\bibitem{repo}
+\textit{Github repository with the experiments and datasets}
+\\\texttt{https://github.com/hristo-vrigazov/big-three-weka}
+
 \end{thebibliography}
 
 \end{document}
