Analyze the dataset

--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -39,13 +39,12 @@ Since there are 48842 instances, we will use hold out set. We will split the dat
 \section{Handling missing values}
 For this dataset, it looks like the most logical decision is to replace the missing values with the mean or median for every attribute, since imputing the rows will likely lose data in this noisy dataset.
 \section{Normalization and standardization}
-Standardization does not seem like a good solution, since the attributes do not look like Gaussian distributed. A normalized dataset however makes sense, and one is available in the Github repository for the project \cite{repo}.
-\section{Descriptive statistics}
+Standardization does not seem like a good solution, since the attributes do not look Gaussian distributed. A normalized dataset however makes sense, and one is available in the Github repository for the project \cite{repo}.
 
 \chapter{Prepare data}
+We will now present different views of the datasets. Note that in every view, the attribute Fnlwgt was removed.
 \section{Raw view of the dataset}
 \section{Normalized view of the dataset}
-\section{Standardized view of the dataset}
 \section{Dataset after feature selection}
 
 \chapter{Evaluate algorithms}
