--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -71,6 +71,7 @@ We will evaluate the datasets described in the previous chapter, and for algorit
     \item Adaboost with decision stump classifier run on 100 iterations
     \item Stacking of C4 decision trees
 \end{enumerate}
+After the test run we see \cite{repo} that the stacking of C4 decision trees and the C4 decision tree alone give the highest results, and we will of course choose the C4 decision tree to improve the results in the next section
 
 \chapter{Impove results}
 \section{Experiment for improving result}
