Added description of the parameter tuning experiment

--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -71,9 +71,17 @@ We will evaluate the datasets described in the previous chapter, and for algorit
     \item Adaboost with decision stump classifier run on 100 iterations
     \item Stacking of C4 decision trees
 \end{enumerate}
-After the test run we see \cite{repo} that the stacking of C4 decision trees and the C4 decision tree alone give the highest results, and we will of course choose the C4 decision tree to improve the results in the next section
+After the test run we see \cite{repo} that the stacking of C4 decision trees and the C4 decision tree alone give the highest results, and we will of course choose the C4 decision tree to improve the results in the next section.
 
 \chapter{Impove results}
 \section{Experiment for improving result}
+We will now run the experiment with different confidence scores of the C4 decision tree:
+\begin{enumerate}
+    \item Confidence score: 0.1
+    \item Confidence score: 0.25
+    \item Confidence score: 0.4
+    \item Confidence score: 0.5
+\end{enumerate}
+
 
 \chapter{Present results}
