Final model for adult dataset

--- a/adult/thoughts/contents.tex
+++ b/adult/thoughts/contents.tex
@@ -82,6 +82,7 @@ We will now run the experiment with different confidence scores of the C4 decisi
     \item Confidence score: 0.4
     \item Confidence score: 0.5
 \end{enumerate}
-
+As we can see from the results \cite{repo}, the optimal decision tree is the one with confidence score 0.5 on the dataset which is not normalized at all. It achieves 0.60 Kappa statistic and accuracy of nearly 86\%.
 
 \chapter{Present results}
+The final model, C4 decision tree with confidence score 0.5, achieves 85.595\% accuracy on the unseen part of the data. See the Github repository \cite{repo} for more info.
