Added attribtue description

--- a/wine/thoughts/contents.tex
+++ b/wine/thoughts/contents.tex
@@ -1,10 +1,27 @@
 \chapter{Defining the problem}
 
-\section{Predict whether salary exceeds 50,000}
+\section{Predict the cultivar of wine}
+We have data from wines from three different cultivars from the same region in Italy \cite{info}. Given some qualities from the wine, like alchohol, acid, etc. we have to predict which cultivar derived an instance.
 
 \section{History of the dataset}
+The dataset was dontated by Riccardo Leardi, the data is from three different cultivars from the same region in Italy \cite{info}.
 
 \section{Attribute information}
+All attributes are continuous
+\begin{enumerate}
+    \item Alchohol 
+    \item Malic acid
+    \item Ash
+    \item Alcalinity of ash
+    \item Magnesium
+    \item Total phenols 
+    \item Flavanoids
+    \item Nonflavanoid phenols
+    \item Proanthocyanins 
+    \item Color intensity 
+    \item Hue 
+    \item OD280/OD315 of diluted wines 
+    \item Proline
 \end{enumerate}
 
 \section{First look at the dataset}
