--- a/wine/thoughts/thesis.tex
+++ b/wine/thoughts/thesis.tex
@@ -113,9 +113,14 @@ September 2016
 \begin{thebibliography}{9}
 
 \bibitem{uci-link} 
-Adult dataset link
+Wine dataset link
 \textit{UCI Machine Learning dataset repository}. 
 \\\texttt{http://archive.ics.uci.edu/ml/datasets/Adult}
+
+\bibitem{info} 
+Wine dataset additional information
+\textit{Additional information for the wine dataset}. 
+\\\texttt{http://artax.karlin.mff.cuni.cz/r-help/library/HDclassif/html/wine.html}
 
 \bibitem{repo}
 \textit{Github repository with the experiments and datasets}
