Added first look at the dataset comments

--- a/wine/thoughts/contents.tex
+++ b/wine/thoughts/contents.tex
@@ -25,11 +25,16 @@ All attributes are continuous
 \end{enumerate}
 
 \section{First look at the dataset}
+There are a lot of features that seem to separate the features quite well. For this reason, discriminant analysis looks very promising, since it finds a linear combination of features that best suits the problem.
+
 \chapter{Analyze the data}
 \section{Handling missing values}
+There are no missing values in the dataset
 \section{Normalization and standardization}
+We may benefit from standardization, since some attributes have a Gaussian-like distribution.
 
 \chapter{Prepare data}
+To analyze the dataset, we will use the following views of the dataset:
 \section{Raw view of the dataset}
 \section{Normalized view of the dataset}
 \section{Dataset after feature selection}
