Added comments about preparing dataset

--- a/wine/thoughts/contents.tex
+++ b/wine/thoughts/contents.tex
@@ -36,8 +36,9 @@ We may benefit from standardization, since some attributes have a Gaussian-like 
 \chapter{Prepare data}
 To analyze the dataset, we will use the following views of the dataset:
 \section{Raw view of the dataset}
-\section{Normalized view of the dataset}
-\section{Dataset after feature selection}
+The dataset in the same view as we downloaded it.
+\section{Standardized view of the dataset}
+The dataset after applying the standardize filter
 
 \chapter{Evaluate algorithms}
 \section{Initial experiment design}
