Described experiment in the report file

--- a/wine/thoughts/contents.tex
+++ b/wine/thoughts/contents.tex
@@ -53,8 +53,6 @@ We will run the experiment design on the the two datasets descibed in the previo
     \item Multilayer perceptron 
     \item Nearest neighbour
 \end{enumerate}
-
-\chapter{Impove results}
-\section{Experiment for improving result}
+The results show 99,16\% accuracy for Quadratic Discriminant Analysis. Since the results are on 10-fold cross validation, we are not overfitting and the results confirm our intuition that the classes are clearly separable through a combination of the attributes.
 
 \chapter{Present results}
